# paperorchestra-for-codex

./: .gitignore  ENVIRONMENT.md  LICENSE  NOTICE.md  README.md  install.sh  pyproject.toml
docs/: paperorchestra-boundary-contracts.md  quality-gate-state-machine.md  strict-review-quality-gate-hardening-m0.md
paperorchestra/: __init__.py  aggregation.py  boundary.py  candidate_commands.py  citation_integrity.py  cli.py  cli_parser.py  compile_env.py  cost.py  critic_trust.py  critics.py  doctor.py  environment.py  eval.py  exporting.py  fidelity.py  first_user_guide.py  fresh_smoke.py  fresh_smoke_acceptance.py  human_needed.py  intake.py  io_utils.py  job_runner.py  jobs.py  latex.py  literature.py  manuscript_repair.py  mcp_handlers.py  mcp_server.py  mcp_smoke.py  mcp_tools.py  models.py  narrative.py  omx_bridge.py  omx_diagnostics.py  operator_feedback.py  operator_feedback_normalization.py  operator_feedback_packets.py  orchestra_acceptance.py  orchestra_citation_quality.py  (+44 more)
research-lane-evidence/: sast-alert-triage-touchstone-worker-1.md
research-notes/: task-2-source-backed-findings-sast-alert-triage.md
scripts/: check-cli-surface.py  check-private-leakage.py  container-entrypoint.sh  container-run.sh  controlled-quality-gate-smoke.py  demo-mock.sh  derive-fresh-smoke-inputs.py  extract-paperorchestra-reference.py  fresh-full-live-smoke-loop.sh  fresh-qa.sh  install-skill.sh  install.sh  live-smoke-claim-safe.sh  pre-live-check.sh  prepare-private-smoke-materials.py  register-codex-mcp.sh  release-safety-scan.py  setup-codex-mcp.sh  smoke-omx-native.sh  (+7 more)
(+1311 files in other folders)
