[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "paperorchestra"
version = "0.1.0"
description = "Independent Codex/OMX-native reconstruction of the PaperOrchestra multi-agent research paper writing workflow"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "kosh7707" }
]
dependencies = []

[project.scripts]
paperorchestra = "paperorchestra.cli:main"
paperorchestra-mcp = "paperorchestra.mcp_server:main"

[tool.setuptools.packages.find]
include = ["paperorchestra*"]

[tool.setuptools.package-data]
paperorchestra = ["prompt_assets/*.md"]
